# SpatialCL

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
SpatialCL/: binary_tree.hpp  binary_utils.hpp  bit_manipulation.hpp  cl_utils.hpp  configuration.hpp  grid.hpp  hilbert_curve.hpp  particle_bvh_sfc_tree.hpp  particle_bvh_tree.hpp  query.hpp  sfc_position_generator.hpp  tree.hpp  types.hpp  zcurve.hpp
SpatialCL/math/: geometry.hpp
SpatialCL/query/: query_base.hpp  query_engine_bfs.hpp  query_engine_dfs.hpp  query_engine_grouped_dfs.hpp  query_knn.hpp  query_range.hpp
SpatialCL/tree/: binary_tree.hpp  particle_bvh_sfc_tree.hpp  particle_bvh_tree.hpp  particle_tree.hpp
benchmarks/: CMakeLists.txt
benchmarks/range_query_on_grid/: CMakeLists.txt  range_query_on_grid.cpp
common/: environment.hpp  timer.hpp  verification_knn.hpp
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  basic.cpp
examples/common/: random_particles.hpp  random_vectors.hpp
examples/construction/: basic.cpp
examples/knn_query/: CMakeLists.txt  dfs_knn_query.cpp
examples/nbody/: CMakeLists.txt  model.hpp  nbody.cpp  nbody.hpp  nbody_tree.hpp  particle_renderer.hpp
examples/range_query/: CMakeLists.txt  dfs_range_query.cpp
tests/: CMakeLists.txt
tests/common/: environment.hpp  verification_knn.hpp  verification_range.hpp
tests/construction/: basic.cpp
tests/knn_query/: CMakeLists.txt  knn_query.cpp
tests/range_query/: CMakeLists.txt  dfs_range_query.cpp  range_query.cpp
